BalanceGame JSON response format 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # hibernate ??
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create
+
+# JAVA camelCase? JSON snake_case? ?? ??
+spring.jackson.property-naming-strategy=SNAKE_CASE
