--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=floating
 
 # MySQL ??
 spring.datasource.url=jdbc:mysql://localhost:3306/floating
-spring.datasource.username=root
+spring.datasource.username=user
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
