--- a/build.gradle
+++ b/build.gradle
@@ -20,15 +20,14 @@ configurations {
 }
 
 repositories {
-	mavenCentral() // 기존 Maven Central 저장소
-	maven { url 'https://jitpack.io' } // JitPack 저장소 추가
+	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'mysql:mysql-connector-java:8.0.33'
-	implementation 'com.github.cdimascio:dotenv-spring-boot:2.2.0'
+	implementation 'io.github.cdimascio:dotenv-java:2.2.0'
 	// SpringDoc OpenAPI 의존성
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
