feat: 환경변수 추가

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -39,6 +39,7 @@ jobs:
         JWT_SECRET=${{ secrets.JWT_SECRET }}
         JWT_EXPIRATION=${{ secrets.JWT_EXPIRATION }}
         REDIRECT_URL=${{ secrets.REDIRECT_URL }}
+        JWT_COOKIE_DOMAIN=${{ secrets.JWT_COOKIE_DOMAIN }}
         EOF
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
