--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -39,6 +39,17 @@ services:
         condition: service_healthy
     networks:
       - floating_network
-
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf # Nginx 설정 파일
+      - ../Frontend/build:/usr/share/nginx/html  # React 빌드된 정적 파일 위치
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    networks:
+      - floating_network
 networks:
   floating_network:
