feat: nginx 설정 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,23 @@ http {
 
     server {
         listen 80;
+        server_name floating.site www.floating.site;
+
+        # HTTP -> HTTPS 리다이렉트
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name floating.site www.floating.site;
+
+        ssl_certificate /etc/letsencrypt/live/floating.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/floating.site/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         # 정적 파일 서빙
         location / {
