--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -45,6 +45,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf # Nginx 설정 파일
       - ../Frontend/build:/usr/share/nginx/html  # React 빌드된 정적 파일 위치
+      - /etc/letsencrypt/live/floating.site:/etc/letsencrypt/live/floating.site
     ports:
       - "80:80"
     depends_on:
