feat: nginx 권한 설정

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,6 +40,7 @@ services:
     networks:
       - floating_network
   nginx:
+    user: root
     container_name: nginx
     image: nginx:latest
     volumes:
