--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,8 +25,8 @@ http {
         listen 443 ssl;
         server_name floating.site www.floating.site;
 
-        ssl_certificate /etc/letsencrypt/live/floating.site/fullchain2.pem;
-        ssl_certificate_key /etc/letsencrypt/live/floating.site/privkey2.pem;
+        ssl_certificate /etc/ssl/certs/fullchain.pem;
+        ssl_certificate_key /etc/ssl/private/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
