--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,6 +48,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf # Nginx 설정 파일
       - ../Frontend/build:/usr/share/nginx/html  # React 빌드된 정적 파일 위치
+      - /home/ec2-user/ssl/fullchain.pem:/etc/ssl/certs/fullchain.pem
+      - /home/ec2-user/ssl/privkey.pem:/etc/ssl/private/privkey.pem
     ports:
       - "80:80"
       - "443:443"
