--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,6 +52,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /login/ {
+            proxy_pass http://backend:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # API 요청은 백엔드 서버로 전달
         location /api/ {
             proxy_pass http://backend:8080;
